--- a/corpvideohost/frontend/public/index.html
+++ b/corpvideohost/frontend/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      href="https://unpkg.com/cloudinary-video-player@1.11.0/dist/cld-video-player.min.css"
+      rel="stylesheet"
+    />
+
     <title>React App</title>
   </head>
   <body>
@@ -39,5 +44,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      src="https://unpkg.com/cloudinary-video-player@1.11.0/dist/cld-video-player.min.js"
+      type="text/javascript"
+    ></script>
   </body>
 </html>
